        considering measure boundaries
      (sy)
      - added a simple Line element to palette, which is basically a
        TextLine with capability of hiding the text and changing the
        end-points in the y-axis
      - MusicXML import/export of TextLines (including lines without text)
      - fix loading of TextLines (and possibly other elements) starting at same tick
29.10 (ws)
      - implement "example note" in drumset editor
      - make tuplet brackets editable
      (sy)
      - tried changing sizing policy of palette to see if this
        allows people to resize it.
      - made TextLine accept formatted text
      - made TextLine text stay in place when editing, it also accepts other
        alignments than Center now. if you changed the style of TextLine in your
        score before, the alignment must be changed to Left and Center for the old
        behavior. the changes take effect after saving and reloading the score
28.10 (ws)
      - fix: when transposing several selected measures, only the first measure was
        transposed
      - extend functionality when pasting text in lyrics mode: only the first word
        ist pasted and removed from clipboard and then the cursor moves to next
        note/chord staying in lyrics mode
      - extend select operations: double click on palette now also works for
        ranges
      (sy)
      - add keyboard selection shortcuts:
            - Shift+Left/Right to select the next/prev note
            - Ctrl+Shift+Left/Right to select next/prev measure
            - Shift+Home/End to select to the beginning/end of line
            - Ctrl+Shift+Home/End to select to beginning/end of score
            - Shift+Up/Down to select the staff above/below
      - select first measure when creating new scores
      - fix bug selecting range with last note of score
      - fix moving note up/down or navigating left/right with keyboard
        plays notes at wrong pitch if there is a tranposition